--- a/css/index.css
+++ b/css/index.css
@@ -574,13 +574,13 @@ body {
       rgba(10, 10, 10, 0.3),
       rgb(10, 10, 10, 1)
     ),
-    url("./../assets/bg.gif");
+    url("./../assets/k8s-bhari.gif");
   --background-background: linear-gradient(
       45deg,
       rgba(10, 10, 10, 1),
       rgba(10, 10, 10, 0.6)
     ),
-    url("./../assets/bg.gif") center center fixed;
+    url("./../assets/k8s-bhari.gif") center center fixed;
   --height: 50vh;
 }
 
@@ -611,7 +611,7 @@ body {
         rgba(10, 10, 10, 1),
         rgba(10, 10, 10, 0)
       ),
-      url("./../assets/bg.gif") !important;
+      url("./../assets/k8s-bhari.gif") !important;
   }
 }
 
